[package]
name = "asserts"
description = "a set of asserts for better tests"
version = "0.1.0"
authors = ["Ashley Williams <ashley666ashley@gmail.com>"]
repository = "https://github.com/ashleygwilliams/asserts.git"
readme = "README.md"
license = "MIT"

[dependencies]
assert_approx_eq = "0.2.2"
assert_ne = "0.2.4"
assert_matches = "1.0.0"
